# cheese

./: Cargo.toml  README.md
cheese-core/src/: config.rs  error.rs  lib.rs  mounts.rs  trash.rs
cheese-core/src/cache/: mod.rs  thumbnail.rs
cheese-core/src/fs/: metadata.rs  mod.rs  ops.rs  scanner.rs  watcher.rs
cheese-core/src/plugins/: api.rs  mod.rs
cheese-core/src/security/: mod.rs  polkit.rs  selinux.rs
cheese/src/state/: mod.rs
cheese/src/ui/: window.rs
