[package]
name = "cheese"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cheese-core = { path = "../cheese-core" }

tokio.workspace = true
gtk4.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true

glib = "0.20"
gio = "0.20"
gdk4 = "0.9"
once_cell = "1.20"
fuzzy-matcher.workspace = true

[build-dependencies]
glib-build-tools = "0.20"

[[bin]]
name = "cheese"
path = "src/main.rs"
